# Assistant

./: .copilot-resume.md  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  build_windows.bat  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: CompilerFlags.cmake  FindTensorRT.cmake
docker/: README.md  base.Dockerfile  compose.local.yml  compose.yml  dev.Dockerfile  entrypoint.sh  run-dev.sh  runtime.Dockerfile
docs/: AI_MODEL_DATASETS_PLAN.md  AI_PIPELINE.md  AUTO_ALIGN_V2_PLAN.md  BLOB_REANCHOR_JITTER_ANALYSE.md  BUG_RESEARCH_2026-07-18.md  COMPONENT_REANCHOR_ALIGNMENT.md  DATASET_CREATOR_PLAN.md  DATASET_STUDIO_PLAN.md  DUAL_CAMERA_MICROSCOPE_PLAN.md  FEATURE_PROPOSALS_2026-07.md  INVESTIGATION_360_2026-07.md  JETSON_AMELIORATIONS.md  JETSON_ERREURS.md  JETSON_MIGRATION.md  JETSON_SESSION_LOG.md  JOURNAL_ERREURS.md  LIVE_TRACKING_ANALYSE_2026-07.md  LIVE_TRACKING_PLAN.md  MICROSCOPE_PLACEMENT_PLAN.md  PLAN_MODELE_V2.md  PROCHAINE_SESSION.md  PROJECT_PLAN.md  PROJECT_STATE.md  REALSENSE_D405_PHASE3_PLAN.md  REALSENSE_D405_PLAN.md  REPRISE_SESSION.md  TUTO_DATASETS.md  TUTO_MODELE_REANCRAGE.md
models/: README.md
resources/: footprint_classes.json  resources.qrc
resources/icons/: README.md
scripts/: bootstrap_jetson.sh  build_jetson.sh  ci_unit_tests.sh  class_mapping.example.yaml  eval_model.py  export_yolov8_onnx.py  fetch_roboflow_dataset.py  generate_calibration_pattern.py  install_prerequisites.bat  install_prerequisites.sh  measure_fov.py  remap_classes.py  run_dev_shell.sh  run_local_gui.sh  train_yolo.py
src/: main.cpp
src/ai/: ComponentDetector.cpp  ComponentDetector.h  InferenceEngine.cpp  InferenceEngine.h  Letterbox.h  ModelManager.cpp  ModelManager.h  OCREngine.cpp  OCREngine.h  SolderInspector.cpp  SolderInspector.h
src/app/: AlignmentController.cpp  AlignmentController.h  Application.cpp  Application.h  Config.cpp  Config.h
src/camera/: CameraCalibration.cpp  CameraCalibration.h  CameraCapture.cpp  CameraCapture.h  FrameBuffer.cpp  FrameBuffer.h  ICameraSource.h  PointCloudData.h  RealSenseCapture.cpp  RealSenseCapture.h  UnifiedAllocator.cpp  UnifiedAllocator.h
src/export/: DataExporter.cpp  DataExporter.h  ReportGenerator.cpp  ReportGenerator.h
src/features/: Annotations.cpp  Annotations.h  BarcodeScanner.cpp  BarcodeScanner.h  BoardLibrary.cpp  BoardLibrary.h  DatasetCreator.cpp  DatasetCreator.h  Measurement.cpp  Measurement.h  PickAndPlace.cpp  PickAndPlace.h  RemoteView.cpp  RemoteView.h  SnapshotHistory.cpp  SnapshotHistory.h  StencilAlign.cpp  StencilAlign.h  VoiceControl.cpp  VoiceControl.h
src/gui/: AlignmentWizard.cpp  AlignmentWizard.h  BoardMinimap.cpp  BoardMinimap.h  BomPanel.cpp  BomPanel.h  CalibrationMonitorDialog.cpp  CalibrationMonitorDialog.h  CameraView.cpp  CameraView.h  ControlPanel.cpp  ControlPanel.h  DatasetPanel.cpp  DatasetPanel.h  FovMeasureDialog.cpp  FovMeasureDialog.h  HelpDialog.cpp  HelpDialog.h  InspectionPanel.cpp  InspectionPanel.h  InspectionWizard.cpp  InspectionWizard.h  MainWindow.cpp  MainWindow.h  PointCloudView.cpp  PointCloudView.h  RealSenseControlsDialog.cpp  RealSenseControlsDialog.h  SettingsDialog.cpp  SettingsDialog.h  StatsPanel.cpp  StatsPanel.h  Theme.h  ToggleSwitch.cpp  ToggleSwitch.h  ViewModeBar.cpp  ViewModeBar.h
src/ibom/: ComponentMap.cpp  ComponentMap.h  IBomData.cpp  IBomData.h  IBomParser.cpp  IBomParser.h
src/overlay/: AlignmentMath.cpp  AlignmentMath.h  BlobComponentDetector.cpp  BlobComponentDetector.h  BoardLocator.cpp  ComponentOverlay.cpp  ComponentOverlay.h  ComponentReanchor.cpp  ComponentReanchor.h  HeatmapRenderer.cpp  HeatmapRenderer.h  Homography.cpp  Homography.h  OverlayRenderer.cpp  OverlayRenderer.h  ReanchorGate.cpp  ReanchorGate.h  TrackingWorker.cpp  TrackingWorker.h
src/utils/: GpuUtils.cpp  GpuUtils.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  Paths.cpp  Paths.h  QtLogSink.cpp  QtLogSink.h
tests/: CMakeLists.txt  test_alignment_controller.cpp  test_alignment_math.cpp  test_annotations.cpp  test_blob_detector.cpp  test_board_library.cpp  test_component_matching.cpp  test_component_reanchor.cpp  test_dataset_creator.cpp  test_homography.cpp  test_ibom_parser.cpp  test_inference.cpp  test_letterbox.cpp  test_reanchor_gate.cpp  test_tracking_worker.cpp  test_unified_allocator.cpp
tools/analysis/: blob_jitter_sim.py
tools/dataset_studio/: INSTALL.bat  README.md  START.bat  app.py  install_training.bat  requirements.txt
tools/dataset_studio/config/: defaults.json  pcb_classes.json
tools/dataset_studio/studio/: fake_dataset.py  gpu_check.py  import_manager.py  project.py  session_split.py  validation.py
